Render ham_station entity.

--- a/templates/ham-station.html.twig
+++ b/templates/ham-station.html.twig
@@ -1,1 +1,5 @@
-<!-- Add you custom twig html here -->
+<div{{ attributes.addClass('ham_station') }}>
+    <h2>{{ callsign }}</h2>
+    {{ name }}
+    {{ address }}
+</div>
