Ham Neighbors page.

--- a/templates/ham-neighbors.html.twig
+++ b/templates/ham-neighbors.html.twig
@@ -1,1 +1,5 @@
-{{ form }}
+<div class="ham-neighbors">
+  <p>Enter your (or someone else's) callsign to see neighboring hams.</p>
+  {{ form }}
+  {{ view }}
+</div>
