--- a/templates/ham-neighbors.html.twig
+++ b/templates/ham-neighbors.html.twig
@@ -1,22 +1,8 @@
-<div class="ham-neighbors">
+<div class="ham-neighbors-wrapper">
   <p>Enter your (or someone else's) callsign to see neighboring hams.</p>
   {{ form }}
-
-  {% if status == constant('Drupal\\ham_station\\HamNeighborsService::STATUS_NOT_GEOCODED') %}
-    <p>Sorry, we haven't geocoded {{ callsign }} yet.</p>
-  {% endif %}
-
-  {% if status == constant('Drupal\\ham_station\\HamNeighborsService::STATUS_GEO_NOT_FOUND') %}
-    <p>Sorry, the geocoding service was not able to find {{ callsign }}'s address.</p>
-  {% endif %}
-
-  {% if status == constant('Drupal\\ham_station\\HamNeighborsService::STATUS_NOT_IN_DB') %}
-    <p>Sorry, {{ callsign }} is not in the database.</p>
-  {% endif %}
-
-  {% if status == constant('Drupal\\ham_station\\HamNeighborsService::STATUS_OK') %}
-    <p><strong>{{ callsign }}</strong> and Neighbors</p>
-    <div id="map"></div>
-    {{ view }}
-  {% endif %}
+  <p class="message"{% if not message %} style="display: none;"{% endif %}>{{ message }}</p>
+  <h2 class="results-title"{% if not view %} style="display: none;"{% endif %}><span class="callsign">{{ callsign }}</span> and neighbors</h2>
+  <div class="map-container" style="display: none;"></div>
+  <div class="view-container">{{ view }}</div>
 </div>
