--- a/templates/ham-neighbors-report.html.twig
+++ b/templates/ham-neighbors-report.html.twig
@@ -7,7 +7,7 @@
       </tr>
       </thead>
       <tbody>
-      {% for state, values in states %}
+      {% for state, values in states_data %}
 
       <tr>
         <td>{{ state }}</td>
