--- a/templates/ham-neighbors-report.html.twig
+++ b/templates/ham-neighbors-report.html.twig
@@ -3,7 +3,7 @@
     <table class="table table-condensed table-bordered ham-neighbors-counts">
       <thead>
       <tr>
-      <th>State</th><th>Not attempted</th><th>Successful</th><th>Not Found</th>
+      <th>State</th><th>Still trying</th><th>Successful</th><th>Not Found</th>
       </tr>
       </thead>
       <tbody>
