Remove meaningless success %

--- a/templates/ham-neighbors-report.html.twig
+++ b/templates/ham-neighbors-report.html.twig
@@ -27,7 +27,6 @@
 
       </tbody>
     </table>
-
-    <p>Success rate: {{ '%.1f %%'|format(success_pc) }}</p>
+    {# <p>Success rate: {{ '%.1f %%'|format(success_pc) }}</p> #}
   </div>
 </div>
