Working towards version 2.

--- a/templates/ham-neighbors.html.twig
+++ b/templates/ham-neighbors.html.twig
@@ -1,4 +1,4 @@
-<div class="ham-neighbors-wrapper">
+<div class="ham-map-wrapper">
   <div class="info-block-1">{{ info_blocks[1]|raw }}</div>
   {{ form }}
   <div class="info-block-2"{% if not view %} style="display: none;"{% endif %}>{{ info_blocks[2]|raw }}</div>
